--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
